force-app/main/default/objects/SSP_Member__c/fields/HasMedicalExpensePartDToggle__c.field-meta.xml
<CustomField>
    <fullName>HasMedicalExpensePartDToggle__c</fullName>
    <description>This field is used to indicate whether the member has medical expenses</description>
    <label>Has medical expense?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>