force-app/main/default/objects/SSP_Member__c/fields/HasOwnBankAccountToggle__c.field-meta.xml
<CustomField>
    <fullName>HasOwnBankAccountToggle__c</fullName>
    <description>This field is used to store whether the member has own bank accounts</description>
    <label>Has Own Bank Account ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>