force-app/main/default/objects/SSP_Member__c/fields/HasParentOrSiblingNextOutHousehold__c.field-meta.xml
<CustomField>
    <fullName>HasParentOrSiblingNextOutHousehold__c</fullName>
    <description>This field is used to indicate whether the member is claiming individual outside household to be parent or Sibling for next year</description>
    <label>HasParentOrSiblingNextOutHousehold</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>