force-app/main/default/objects/SSP_Member__c/fields/HasPreArrangedFuneralContractToggle__c.field-meta.xml
<CustomField>
    <fullName>HasPreArrangedFuneralContractToggle__c</fullName>
    <description>This field is used to indicate whether the member has Pre arranged Funeral Contract</description>
    <label>Has Pre arranged Funeral Contract ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>