force-app/main/default/objects/SSP_Member__c/fields/HasRealEstatePropertyToggle__c.field-meta.xml
<CustomField>
    <fullName>HasRealEstatePropertyToggle__c</fullName>
    <description>This field is used to indicate whether the member has real estate property</description>
    <label>Has Real Estate Property ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>