force-app/main/default/objects/SSP_Member__c/fields/HasReceivedBenefitsFromOtherStateToggle__c.field-meta.xml
<CustomField>
    <fullName>HasReceivedBenefitsFromOtherStateToggle__c</fullName>
    <description>This field is used to indicate whether the member has received benefits from other state</description>
    <label>Has received benefits from other state?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>