force-app/main/default/objects/SSP_Member__c/fields/HasRecievedHalfMealsFrmInstToggle__c.field-meta.xml
<CustomField>
    <fullName>HasRecievedHalfMealsFrmInstToggle__c</fullName>
    <description>This field is used to store if individual has received more than 50% meals</description>
    <label>Have Received more than 50% daily Meals?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>