force-app/main/default/objects/SSP_Member__c/fields/HasSelfEmploymentIncomeToggle__c.field-meta.xml
<CustomField>
    <fullName>HasSelfEmploymentIncomeToggle__c</fullName>
    <description>This field is used to indicate whether the member has Self Employment Income</description>
    <label>Has self employment income?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>