force-app/main/default/objects/SSP_Member__c/fields/HasServicesorPaymentsToggle__c.field-meta.xml
<CustomField>
    <fullName>HasServicesorPaymentsToggle__c</fullName>
    <description>This field is used to indicate whether the member has services or payments</description>
    <label>Has services or payment?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>