force-app/main/default/objects/SSP_Member__c/fields/HasShelterExpenseToggle__c.field-meta.xml
<CustomField>
    <fullName>HasShelterExpenseToggle__c</fullName>
    <description>This field is used to indicate whether the member has Shelter expense</description>
    <label>Has shelter expense?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>