force-app/main/default/objects/SSP_Member__c/fields/HasSSN__c.field-meta.xml
<CustomField>
    <fullName>HasSSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have Social Security Number ?</label>
    <type>Checkbox</type>
</CustomField>