force-app/main/default/objects/SSP_Member__c/fields/HasTaxDeductionsExpenseToggle__c.field-meta.xml
<CustomField>
    <fullName>HasTaxDeductionsExpenseToggle__c</fullName>
    <description>This field is used to store whether the member has tax deductions expense</description>
    <label>Has tax deduction expense?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>