force-app/main/default/objects/SSP_Member__c/fields/HasUnearnedIncomeToggle__c.field-meta.xml
<CustomField>
    <fullName>HasUnearnedIncomeToggle__c</fullName>
    <description>This field is used to indicate whether the member has Unearned Income</description>
    <label>Has unearned income?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>