force-app/main/default/objects/SSP_Member__c/fields/HasUnpaidEmploymentToggle__c.field-meta.xml
<CustomField>
    <fullName>HasUnpaidEmploymentToggle__c</fullName>
    <description>This field is used to indicate whether the member has unpaid employment</description>
    <label>Has unpaid employment?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>