force-app/main/default/objects/SSP_Member__c/fields/HasUtilityExpenseToggle__c.field-meta.xml
<CustomField>
    <fullName>HasUtilityExpenseToggle__c</fullName>
    <description>This field is used to indicate whether the member has Utility expense</description>
    <label>Has utility expense?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>