force-app/main/default/objects/SSP_Member__c/fields/HasVehicleToggle__c.field-meta.xml
<CustomField>
    <fullName>HasVehicleToggle__c</fullName>
    <description>This field is used to indicate whether the member has Vehicle resource</description>
    <label>Has Vehicle ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>