force-app/main/default/objects/SSP_Member__c/fields/HaveHigherEducationExpenseToggle__c.field-meta.xml
<CustomField>
    <fullName>HaveHigherEducationExpenseToggle__c</fullName>
    <description>This field is used to indicate whether the member has higher education expense</description>
    <label>Have higher education expense?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>