force-app/main/default/objects/SSP_Member__c/fields/HighestEducationGraduatedDate__c.field-meta.xml
<CustomField>
    <fullName>HighestEducationGraduatedDate__c</fullName>
    <description>This field is used to store the Graduation date for Higher education on a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>