force-app/main/default/objects/SSP_Member__c/fields/HighestEducationLevelCode__c.field-meta.xml
<CustomField>
    <fullName>HighestEducationLevelCode__c</fullName>
    <description>This field is used to store highest level of education for a member</description>
    <label>Highest Level of Education</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>HighestEducationLevel</valueSetName>
        
        </valueSet>
</CustomField>