force-app/main/default/objects/SSP_Member__c/fields/HospitalizationEndDate__c.field-meta.xml
<CustomField>
    <fullName>HospitalizationEndDate__c</fullName>
    <description>Used in Living Arrangement</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospitalization End Date</label>
    <type>Date</type>
</CustomField>