force-app/main/default/objects/SSP_Member__c/fields/HospitalizationStartDate__c.field-meta.xml
<CustomField>
    <fullName>HospitalizationStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospitalization Start Date</label>
    <type>Date</type>
</CustomField>