force-app/main/default/objects/SSP_Member__c/fields/I94Number__c.field-meta.xml
<CustomField>
    <fullName>I94Number__c</fullName>
    <description>This field is used to store I94 Number on member</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>I94 Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>