force-app/main/default/objects/SSP_Member__c/fields/IAVTypeCode__c.field-meta.xml
<CustomField>
    <fullName>IAVTypeCode__c</fullName>
    <description>This field is used to store IAVTypeCode from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IAV Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>