force-app/main/default/objects/SSP_Member__c/fields/Identify_verification_method__c.field-meta.xml
<CustomField>
    <fullName>Identify_verification_method__c</fullName>
    <label>Identify verification method</label>
    <type>Picklist</type>
    <valueSet>
        
        <restricted>true</restricted>
        
        <valueSetDefinition>
            
            
            <value>
                
                <fullName>New RIDP</fullName>
                
                
                <label>New RIDP</label>
                
            </value>
            
            <value>
                
                <fullName>Resume RIDP</fullName>
                
                
                <label>Resume RIDP</label>
                
            </value>
            
        </valueSetDefinition>
        
    </valueSet>
</CustomField>