force-app/main/default/objects/SSP_Member__c/fields/ImmigrationDateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>ImmigrationDateOfBirth__c</fullName>
    <description>This field is used to store Date of birth on member for immigration</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Immigration Date of Birth</label>
    <type>Date</type>
</CustomField>