force-app/main/default/objects/SSP_Member__c/fields/ImmigrationDocumentTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ImmigrationDocumentTypeCode__c</fullName>
    <description>This field is used to store immigration document type on a member</description>
    <label>Immigration Document Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>ImmigrationDocumentType</valueSetName>
        
        </valueSet>
</CustomField>