force-app/main/default/objects/SSP_Member__c/fields/ImmigrationFirstName__c.field-meta.xml
<CustomField>
    <fullName>ImmigrationFirstName__c</fullName>
    <description>This field is used to store first name of a member for immigration</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Immigration FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>