force-app/main/default/objects/SSP_Member__c/fields/ImmigrationLastName__c.field-meta.xml
<CustomField>
    <fullName>ImmigrationLastName__c</fullName>
    <description>This field is used to store Lastname of a member for immigration</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Immigration LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>