force-app/main/default/objects/SSP_Member__c/fields/ImmigrationMiddleName__c.field-meta.xml
<CustomField>
    <fullName>ImmigrationMiddleName__c</fullName>
    <description>This field is used to store middle name initial on a member for Immigration</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Immigration Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>