force-app/main/default/objects/SSP_Member__c/fields/ImmigrationSuffix__c.field-meta.xml
<CustomField>
    <fullName>ImmigrationSuffix__c</fullName>
    <description>This field is used to store suffix on a member for Immigration</description>
    <label>Immigration Suffix</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Suffix</valueSetName>
        
        </valueSet>
</CustomField>