force-app/main/default/objects/SSP_Member__c/fields/IncarcerationBeginDate__c.field-meta.xml
<CustomField>
    <fullName>IncarcerationBeginDate__c</fullName>
    <description>This field is used to store Incarceration Begin date of a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Incarceration Begin Date</label>
    <type>Date</type>
</CustomField>