force-app/main/default/objects/SSP_Member__c/fields/IndianTribeCode__c.field-meta.xml
<CustomField>
    <fullName>IndianTribeCode__c</fullName>
    <description>This field is used to store Indian Tribe code</description>
    <label>Tribe</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>IndianTribeCode</valueSetName>
        
        </valueSet>
</CustomField>