force-app/main/default/objects/SSP_Member__c/fields/IndianTribeState__c.field-meta.xml
<CustomField>
    <fullName>IndianTribeState__c</fullName>
    <description>This field is used to store Indian tribe state code for a member</description>
    <label>IndianTribeState</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>