force-app/main/default/objects/SSP_Member__c/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field is used to store individual Id of a member</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>IndividualId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>