force-app/main/default/objects/SSP_Member__c/fields/InHomeCareType__c.field-meta.xml
<CustomField>
    <fullName>InHomeCareType__c</fullName>
    <description>This field is used to store type of In home assistance</description>
    <label>Type of In Home Assistance</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>InHomeCareType</valueSetName>
        
        </valueSet>
</CustomField>