force-app/main/default/objects/SSP_Member__c/fields/InmateStatusIndicator__c.field-meta.xml
<CustomField>
    <fullName>InmateStatusIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate Inmate Status of a member</description>
    <label>InmateStatusIndicator</label>
    <type>Checkbox</type>
</CustomField>