force-app/main/default/objects/SSP_Member__c/fields/InternalAlienSponsor__c.field-meta.xml
<CustomField>
    <fullName>InternalAlienSponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store if Alien Sponsor is from Household</description>
    <label>Internal Alien Sponsor</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipLabel>SSP Members (Internal Alien Sponsor)</relationshipLabel>
    <relationshipName>SSP_Members</relationshipName>
    <type>Lookup</type>
</CustomField>