force-app/main/default/objects/SSP_Member__c/fields/IsBlindToggle__c.field-meta.xml
<CustomField>
    <fullName>IsBlindToggle__c</fullName>
    <description>This field is used to determine if an individual is blind.</description>
    <label>Are you Blind ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>