force-app/main/default/objects/SSP_Member__c/fields/IsCoverageMonth1__c.field-meta.xml
<CustomField>
    <fullName>IsCoverageMonth1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether a member required assistance for Medical bills in First month</description>
    <label>Assistance for Medical Bills M1 ?</label>
    <type>Checkbox</type>
</CustomField>