force-app/main/default/objects/SSP_Member__c/fields/IsCoverageMonth2__c.field-meta.xml
<CustomField>
    <fullName>IsCoverageMonth2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether a member required assistance for Medical bills in Second month</description>
    <label>Assistance for Medical Bills M2 ?</label>
    <type>Checkbox</type>
</CustomField>