force-app/main/default/objects/SSP_Member__c/fields/IsCoverageMonth3__c.field-meta.xml
<CustomField>
    <fullName>IsCoverageMonth3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether a member required assistance for Medical bills in Third month</description>
    <label>Assistance for Medical Bills M3 ?</label>
    <type>Checkbox</type>
</CustomField>