force-app/main/default/objects/SSP_Member__c/fields/IsCurrentlyEnrolledInSchoolToggle__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentlyEnrolledInSchoolToggle__c</fullName>
    <description>This field is used to store if individual is currently enrolled in school</description>
    <label>Is currently enrolled in school?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>