force-app/main/default/objects/SSP_Member__c/fields/IsDateOfBirthValidated__c.field-meta.xml
<CustomField>
    <fullName>IsDateOfBirthValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is populated from MCI merged service as part of IEES/SSA Call.</description>
    <label>IsDateOfBirthValidated</label>
    <type>Checkbox</type>
</CustomField>