force-app/main/default/objects/SSP_Member__c/fields/IsDateOfDeathValidated__c.field-meta.xml
<CustomField>
    <fullName>IsDateOfDeathValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is populated from MCI merged service as part of IEES/SSA Call and will need in SSP-DC call.</description>
    <label>IsDateOfDeathValidated</label>
    <type>Checkbox</type>
</CustomField>