force-app/main/default/objects/SSP_Member__c/fields/IsDisabledToggle__c.field-meta.xml
<CustomField>
    <fullName>IsDisabledToggle__c</fullName>
    <description>This field is used to determine if an individual is disabled.</description>
    <label>Are you Disabled ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>