force-app/main/default/objects/SSP_Member__c/fields/IsEligibleForIHFlagToggle__c.field-meta.xml
<CustomField>
    <fullName>IsEligibleForIHFlagToggle__c</fullName>
    <description>This field is used to indicate whether a member is eligible for IH</description>
    <label>Is eligible for IH?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>