force-app/main/default/objects/SSP_Member__c/fields/IsEligibleForIndianHealthServicesToggle__c.field-meta.xml
<CustomField>
    <fullName>IsEligibleForIndianHealthServicesToggle__c</fullName>
    <description>This field is used to indicate whether the member is eligible for Indian Health Services</description>
    <label>Is eligible for Indian Health Services?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>