force-app/main/default/objects/SSP_Member__c/fields/IsFederalRecognizedIndianTribeToggle__c.field-meta.xml
<CustomField>
    <fullName>IsFederalRecognizedIndianTribeToggle__c</fullName>
    <description>This field is used to indicate whether the member belongs to Federal recognized Indian tribe</description>
    <label>Is federal recognized Indian tribe?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>