force-app/main/default/objects/SSP_Member__c/fields/IsFileCleared__c.field-meta.xml
<CustomField>
    <fullName>IsFileCleared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the member has file cleared in T member interface call</description>
    <label>IsFileCleared</label>
    <type>Checkbox</type>
</CustomField>