force-app/main/default/objects/SSP_Member__c/fields/IsFiveYearBar__c.field-meta.xml
<CustomField>
    <fullName>IsFiveYearBar__c</fullName>
    <description>This field is used to indicate whether there is a Five year Bar for member from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Five Year Bar ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>