force-app/main/default/objects/SSP_Member__c/fields/IsFiveYearBarMet__c.field-meta.xml
<CustomField>
    <fullName>IsFiveYearBarMet__c</fullName>
    <description>This field is used to indicate whether the member is Five year Bar is met from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Five Year Bar Met ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>