force-app/main/default/objects/SSP_Member__c/fields/IsFixedAddressToggle__c.field-meta.xml
<CustomField>
    <fullName>IsFixedAddressToggle__c</fullName>
    <description>This field is used to store if individual has physical address</description>
    <label>Has Physical Address ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>