force-app/main/default/objects/SSP_Member__c/fields/IsFosterCareToggle__c.field-meta.xml
<CustomField>
    <fullName>IsFosterCareToggle__c</fullName>
    <description>This field is used to determine if an individual was in foster care.</description>
    <label>Is Foster Care ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>