force-app/main/default/objects/SSP_Member__c/fields/IsHeadOfHousehold__c.field-meta.xml
<CustomField>
    <fullName>IsHeadOfHousehold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Head Of Household</label>
    <type>Checkbox</type>
</CustomField>