force-app/main/default/objects/SSP_Member__c/fields/IsHispanicLatinoSpanishToggle__c.field-meta.xml
<CustomField>
    <fullName>IsHispanicLatinoSpanishToggle__c</fullName>
    <description>This field is used to store if individual belongs to hispanic. Spanish race.</description>
    <label>Is Hispanic/Latino?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>