force-app/main/default/objects/SSP_Member__c/fields/IsImmigrationDetailsMatch__c.field-meta.xml
<CustomField>
    <fullName>IsImmigrationDetailsMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the member immigration details match with actual details</description>
    <label>Is Immigration Details Match ?</label>
    <type>Checkbox</type>
</CustomField>