force-app/main/default/objects/SSP_Member__c/fields/IsIntendToResideToggle__c.field-meta.xml
<CustomField>
    <fullName>IsIntendToResideToggle__c</fullName>
    <description>This field is used to store if individual intends to reside</description>
    <label>Is Intende to reside?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>