force-app/main/default/objects/SSP_Member__c/fields/IsMCICreateUpdateRequired__c.field-meta.xml
<CustomField>
    <fullName>IsMCICreateUpdateRequired__c</fullName>
    <description>This field is used to indicate whether MCI create update is required</description>
    <label>Is MCI Create Update Required ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>