force-app/main/default/objects/SSP_Member__c/fields/IsMigrantOrSeasonalFarmWorkerToggle__c.field-meta.xml
<CustomField>
    <fullName>IsMigrantOrSeasonalFarmWorkerToggle__c</fullName>
    <description>This field is used to store if individual is migrant or seasonal farm worker</description>
    <label>Is Migrant or Seasonal Farm Worker ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>