force-app/main/default/objects/SSP_Member__c/fields/IsMilitaryMemberToggle__c.field-meta.xml
<CustomField>
    <fullName>IsMilitaryMemberToggle__c</fullName>
    <description>This field is used to indicate whether the member is from Military</description>
    <label>Is military member?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>