force-app/main/default/objects/SSP_Member__c/fields/IsNonUSCitizenMilitaryMemberToggle__c.field-meta.xml
<CustomField>
    <fullName>IsNonUSCitizenMilitaryMemberToggle__c</fullName>
    <description>This field will contain data from Non US Citizen Screen</description>
    <label>Is non U.S.Citizen Military member?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>