force-app/main/default/objects/SSP_Member__c/fields/IsOnSickLeaveToggle__c.field-meta.xml
<CustomField>
    <fullName>IsOnSickLeaveToggle__c</fullName>
    <description>This field is used to determine if an individual is on sick leave.</description>
    <label>Is Sick Leave from Employer ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>