force-app/main/default/objects/SSP_Member__c/fields/IsPregnantInLastThreeMonthsToggle__c.field-meta.xml
<CustomField>
    <fullName>IsPregnantInLastThreeMonthsToggle__c</fullName>
    <description>This field is used to determine if an individual is pregnant in last three months.</description>
    <label>Is Pregnant in Last Three Months ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>