force-app/main/default/objects/SSP_Member__c/fields/IsPregnantToggle__c.field-meta.xml
<CustomField>
    <fullName>IsPregnantToggle__c</fullName>
    <description>This field is used to store if current individual is pregnant</description>
    <label>Is Currently Pregnant ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>