force-app/main/default/objects/SSP_Member__c/fields/IsPrimaryTextPreferred__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryTextPreferred__c</fullName>
    <description>This field is used to send text messages to Primary communication channel</description>
    <label>Send Text messages to Primary ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>