force-app/main/default/objects/SSP_Member__c/fields/IsQualifiedNonCitizen__c.field-meta.xml
<CustomField>
    <fullName>IsQualifiedNonCitizen__c</fullName>
    <description>This field is used to indicate whether the member is qualified Non citizen from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Qualified Non Citizen ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>