force-app/main/default/objects/SSP_Member__c/fields/IsReceivingCaretakerServicesToggle__c.field-meta.xml
<CustomField>
    <fullName>IsReceivingCaretakerServicesToggle__c</fullName>
    <description>This field is used to indicate whether a member is using caretaker services</description>
    <label>Is Receiving Caretaker Services ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>