force-app/main/default/objects/SSP_Member__c/fields/IsReceivingMedicareBenefitToggle__c.field-meta.xml
<CustomField>
    <fullName>IsReceivingMedicareBenefitToggle__c</fullName>
    <description>This field is used to determine if an individual has received medicare benefits.</description>
    <label>Is Receiving Medicare Benefits ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>