force-app/main/default/objects/SSP_Member__c/fields/IsRecoveryFromIllnessOrInjuryToggle__c.field-meta.xml
<CustomField>
    <fullName>IsRecoveryFromIllnessOrInjuryToggle__c</fullName>
    <description>This field is used to determine if an individual is recovering from illness or injury.</description>
    <label>Is Recovery from Illness or Injury ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>