force-app/main/default/objects/SSP_Member__c/fields/IsRequestingOrReceivingCISToggle__c.field-meta.xml
<CustomField>
    <fullName>IsRequestingOrReceivingCISToggle__c</fullName>
    <description>This field is used to indicate whether a member need CIS services</description>
    <label>Is Requesting or Receiving CIS ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>