force-app/main/default/objects/SSP_Member__c/fields/IsSponsoredByOrganizationToggle__c.field-meta.xml
<CustomField>
    <fullName>IsSponsoredByOrganizationToggle__c</fullName>
    <description>This field is used to indicate whether the member has sponsorship from Organization</description>
    <label>Is sponsored by organization?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>