force-app/main/default/objects/SSP_Member__c/fields/IsStateMedicaidprogramCode__c.field-meta.xml
<CustomField>
    <fullName>IsStateMedicaidprogramCode__c</fullName>
    <description>This field is used to store response if Individual Is receiving health care benefit through Medicaid program</description>
    <label>Receiving Healthcare through Medicaid?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>