force-app/main/default/objects/SSP_Member__c/fields/IsTMember__c.field-meta.xml
<CustomField>
    <fullName>IsTMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the Member is T member</description>
    <label>IsTMember</label>
    <type>Checkbox</type>
</CustomField>